[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/PlatformBoss.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Gun0Base.png" type="Texture" id=3]
[ext_resource path="res://Scenes/PlatformBoss.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Guns.gd" type="Script" id=5]
[ext_resource path="res://Scenes/DisruptFrames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/BlindingLight.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.125, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 43.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21, 40 )

[sub_resource type="CircleShape2D" id=6]
radius = 800.16

[sub_resource type="CircleShape2D" id=7]
radius = 818.0

[sub_resource type="CircleShape2D" id=8]
radius = 776.041

[sub_resource type="CircleShape2D" id=9]
radius = 808.158

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 200, 424 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 160.0

[node name="PlatformBoss" type="KinematicBody2D" groups=["Platform"]]
script = ExtResource( 4 )
explosionScene = ExtResource( 7 )

[node name="GroundDisrupt" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 16, -24 )
scale = Vector2( 6, 6 )
z_index = 10
frames = ExtResource( 6 )
frame = 6
speed_scale = 2.0
playing = true

[node name="GroundDisrupt2" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -274, -526 )
rotation = 0.571548
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 5
speed_scale = 2.0
playing = true

[node name="GroundDisrupt6" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -496, -509 )
rotation = -0.621879
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 5
speed_scale = 2.0
playing = true

[node name="GroundDisrupt7" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -432, -296 )
rotation = -1.18815
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 4
speed_scale = 2.0
playing = true

[node name="GroundDisrupt3" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 497.153, -517.847 )
rotation = 1.87145
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 5
speed_scale = 2.0
playing = true

[node name="GroundDisrupt8" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 275.153, -500.847 )
rotation = 0.678024
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 4
speed_scale = 2.0
playing = true

[node name="GroundDisrupt9" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 384, -288 )
rotation = 0.111755
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 3
speed_scale = 2.0
playing = true

[node name="GroundDisrupt10" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 360, 304 )
rotation = 0.844568
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 5
speed_scale = 2.0
playing = true

[node name="GroundDisrupt11" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 480, 464 )
rotation = -0.348859
scale = Vector2( 3.65054, 3.65054 )
z_index = 10
frames = ExtResource( 6 )
frame = 4
speed_scale = 2.0
playing = true

[node name="GroundDisrupt12" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 256, 496 )
rotation = -0.915129
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 3
speed_scale = 2.0
playing = true

[node name="GroundDisrupt13" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -397.557, 308.23 )
rotation = 0.844568
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 5
speed_scale = 2.0
playing = true

[node name="GroundDisrupt14" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -261.557, 476.23 )
rotation = -0.348859
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 4
speed_scale = 2.0
playing = true

[node name="GroundDisrupt15" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -501.557, 500.23 )
rotation = -0.915129
scale = Vector2( 3.16667, 3.16667 )
z_index = 10
frames = ExtResource( 6 )
frame = 3
speed_scale = 2.0
playing = true

[node name="Platform" type="Sprite" parent="."]
z_index = 30
texture = ExtResource( 1 )

[node name="ColliderMain" type="CollisionPolygon2D" parent="."]
visible = false
build_mode = 1
polygon = PoolVector2Array( 384, -632, 496, -600, 584, -480, 600, -400, 536, -272, 360, -216, 272, -48, 248, -32, 248, 32, 272, 48, 360, 216, 440, 216, 544, 280, 592, 376, 584, 504, 512, 592, 368, 632, 256, 576, 32, 472, -40, 472, -248, 576, -368, 632, -496, 608, -584, 504, -600, 392, -536, 272, -448, 216, -360, 216, -288, 72, -272, 48, -248, 32, -248, -32, -272, -48, -360, -216, -464, -224, -560, -296, -600, -416, -584, -512, -512, -592, -424, -632, -320, -624, -248, -576, -40, -480, 40, -480, 240, -576, 312, -616 )

[node name="Top" type="Area2D" parent="." groups=["PlatformVent"]]
visible = false
position = Vector2( 0, -487 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( -2.85075e-05, 7.875 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Bottom" type="Area2D" parent="." groups=["PlatformVent"]]
visible = false
position = Vector2( 0, 491 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 0, -23.5 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="." groups=["PlatformVent"]]
visible = false
position = Vector2( 256, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -11, 0 )
shape = SubResource( 4 )

[node name="Left" type="Area2D" parent="." groups=["PlatformVent"]]
visible = false
position = Vector2( -256, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 11, 0 )
shape = SubResource( 5 )

[node name="Guns" type="Node2D" parent="."]
z_index = 31
script = ExtResource( 5 )
bullet = ExtResource( 2 )

[node name="Gun0" type="Sprite" parent="Guns"]
position = Vector2( -168, 520 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun1" type="Sprite" parent="Guns"]
position = Vector2( -128, 504 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun2" type="Sprite" parent="Guns"]
position = Vector2( 128, 504 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun3" type="Sprite" parent="Guns"]
position = Vector2( 168, 520 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun4" type="Sprite" parent="Guns"]
position = Vector2( -112, 416 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun5" type="Sprite" parent="Guns"]
position = Vector2( 112, 416 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun6" type="Sprite" parent="Guns"]
position = Vector2( 192, 88 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun7" type="Sprite" parent="Guns"]
position = Vector2( 152, 144 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun8" type="Sprite" parent="Guns"]
position = Vector2( 88, -256 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun9" type="Sprite" parent="Guns"]
position = Vector2( 168, -216 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun10" type="Sprite" parent="Guns"]
position = Vector2( 312, -136 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun11" type="Sprite" parent="Guns"]
position = Vector2( 280, -72 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun12" type="Sprite" parent="Guns"]
position = Vector2( 280, 72 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun13" type="Sprite" parent="Guns"]
position = Vector2( 312, 136 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun14" type="Sprite" parent="Guns"]
position = Vector2( 176, -536 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun15" type="Sprite" parent="Guns"]
position = Vector2( 96, -496 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun16" type="Sprite" parent="Guns"]
position = Vector2( -96, -496 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun17" type="Sprite" parent="Guns"]
position = Vector2( -176, -536 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun18" type="Sprite" parent="Guns"]
position = Vector2( -88, -256 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun19" type="Sprite" parent="Guns"]
position = Vector2( -168, -216 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun20" type="Sprite" parent="Guns"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun21" type="Sprite" parent="Guns"]
position = Vector2( 0, 184 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun22" type="Sprite" parent="Guns"]
position = Vector2( -144, 144 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun23" type="Sprite" parent="Guns"]
position = Vector2( -192, 88 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun24" type="Sprite" parent="Guns"]
position = Vector2( 0, -72 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun25" type="Sprite" parent="Guns"]
position = Vector2( -280, -72 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun26" type="Sprite" parent="Guns"]
position = Vector2( -312, -136 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun27" type="Sprite" parent="Guns"]
position = Vector2( -280, 72 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="Gun28" type="Sprite" parent="Guns"]
position = Vector2( -312, 136 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="BottomRange" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1000 )

[node name="Col" type="CollisionShape2D" parent="BottomRange"]
shape = SubResource( 6 )

[node name="RighRange" type="Area2D" parent="."]
visible = false
position = Vector2( 1000, 0 )

[node name="Col" type="CollisionShape2D" parent="RighRange"]
shape = SubResource( 7 )

[node name="TopRange" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -1000 )

[node name="Col" type="CollisionShape2D" parent="TopRange"]
shape = SubResource( 8 )

[node name="LeftRange" type="Area2D" parent="."]
visible = false
position = Vector2( -1000, 0 )

[node name="Col" type="CollisionShape2D" parent="LeftRange"]
shape = SubResource( 9 )

[node name="ExtraCol" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 10 )

[node name="ExtraCol2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -360, 416 )
shape = SubResource( 11 )

[node name="ExtraCol3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 360, 408 )
shape = SubResource( 11 )

[node name="ExtraCol4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 360, -416 )
shape = SubResource( 11 )

[node name="ExtraCol5" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -352, -408 )
shape = SubResource( 11 )

[node name="Explosions" type="Node2D" parent="."]

[node name="Explosion" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( -232, 209 )
rotation = 0.171042
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 1
paused = true

[node name="Explosion6" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( -176, 40 )
rotation = -2.45917
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 8
paused = true

[node name="Explosion2" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( 384, -464 )
rotation = 3.6425
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 13
paused = true

[node name="Explosion5" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( -384, -416 )
rotation = 5.09985
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 40
paused = true

[node name="Explosion7" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( 200, -216 )
rotation = -0.558505
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 49
paused = true

[node name="Explosion3" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( 248, 80 )
rotation = -5.94634
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 21
paused = true

[node name="Explosion4" parent="Explosions" instance=ExtResource( 7 )]
position = Vector2( 200, 272 )
rotation = 2.18515
scale = Vector2( 8, 8 )
z_index = 31
timed = true
looping = true
noDisturbDust = true
delay = 30
paused = true

[node name="BlindingLight" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.1, 0.1 )
z_index = 121
texture = ExtResource( 8 )

[connection signal="area_entered" from="Top" to="." method="_on_Top_area_entered"]
[connection signal="area_entered" from="Bottom" to="." method="_on_Bottom_area_entered"]
[connection signal="area_entered" from="Right" to="." method="_on_Right_area_entered"]
[connection signal="area_entered" from="Left" to="." method="_on_Left_area_entered"]
[connection signal="body_entered" from="BottomRange" to="Guns" method="_on_BottomRange_body_entered"]
[connection signal="body_exited" from="BottomRange" to="Guns" method="_on_BottomRange_body_exited"]
[connection signal="body_entered" from="RighRange" to="Guns" method="_on_RighRange_body_entered"]
[connection signal="body_exited" from="RighRange" to="Guns" method="_on_RighRange_body_exited"]
[connection signal="body_entered" from="TopRange" to="Guns" method="_on_TopRange_body_entered"]
[connection signal="body_exited" from="TopRange" to="Guns" method="_on_TopRange_body_exited"]
[connection signal="body_entered" from="LeftRange" to="Guns" method="_on_LeftRange_body_entered"]
[connection signal="body_exited" from="LeftRange" to="Guns" method="_on_LeftRange_body_exited"]
